--- a/index.html
+++ b/index.html
@@ -3,72 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up Page</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap">
+    <title>Your Company</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Teko:wght@500&display=swap">
     <style>
         body {
-            font-family: 'Teko', sans-serif;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            overflow: hidden; /* Prevent scrolling */
+            background-color: #000; /* Black background color */
+        }
+
+        header {
+            background-color: #000;
+            color: #fff;
+            text-align: center;
+            padding: 5px;
+            height: 50px; /* Adjust the height as needed */
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
             display: flex;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-image: url('Img/OverImage.png');
-            background-size: cover;
-            background-position: center;
+            justify-content: space-between;
         }
 
-        #signup-container {
+        header img {
+            width: 30px;
+            height: auto;
+            margin-left: 20px;
+            margin-top: 10px;
+        }
+
+        header #logo {
+            width: 400px; /* Adjust the width as needed */
+            height: auto;
+            margin-right: 80px;
+            margin-top: 270px;
+        }
+
+        #image-background {
+            position: fixed;
+            top: 49;
+            left: 0;
+            bottom: auto;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: top; /* Mantiene la parte superior de la imagen visible */
+            z-index: -1; /* Place the image behind other elements */
+        }
+
+        /* Responsive styles for mobile */
+        @media (max-width: 767px) {
+            header {
+                height: 40px; /* Adjust the height for mobile */
+            }
+
+            header img {
+                width: 20px; /* Adjust the size for mobile */
+                margin-left: 10px;
+                margin-top: 5px;
+            }
+
+            header #logo {
+                width: 30px; /* Adjust the width for mobile */
+                margin-right: 10px;
+            }
+
+            #form-container {
+                bottom: 10%; /* Adjust the distance from the bottom for mobile */
+                left: 30%;
+                right: 30%;
+            }
+
+            input[type="email"] {
+                width: 100%; /* Adjust the width to 100% for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+                margin-right: 10%; /* Remove right margin for mobile */
+                margin-bottom: 10px; /* Add bottom margin for mobile */
+                margin-left: 10%;
+            }
+
+            button {
+                padding: 8px 20px; /* Adjust padding for mobile */
+                font-size: 18px; /* Adjust font size for mobile */
+            }
+        }
+
+        /* Additional styles for the form container */
+        #form-container {
+            background-color: #000; /* Black background color */
+            padding: 20px; /* Add padding to the container */
+            border-radius: 10px; /* Add rounded corners */
+            position: fixed; /* Change from absolute to fixed */
+            bottom: 10%; /* Adjust distance from bottom as needed */
+            left: 50%;
+            right: 50%;
+            transform: translateX(-50%); /* Horizontal centering */
+            z-index: 999;
+            margin-bottom: 10px;
+            max-width: 600px; /* Set a maximum width for the form container */
+            width: 90%; /* Set a width for the form container */
+        }
+
+        /* Additional styles for the form */
+        form {
             text-align: center;
-            padding: 33.6px;
-            background-color: #26213d;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: calc(100% - 20px);
-            max-width: 672px;
-            margin: 10px;
-            box-sizing: border-box;
+            color: #fff;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to the form */
+            font-size: 20px; /* Font size 20px */
+            font-weight: 100;
+            letter-spacing: 1px;
         }
 
-        input[type="text"] {
-            padding: 16.8px;
-            width: calc(100% - 20px);
-            margin-bottom: 16.8px;
+        input[type="email"] {
+            padding: 8px;
+            width: 350px;
+            font-size: 22px;
             border: 1px solid #ccc;
-            border-radius: 4px;
+            border-radius: 8px;
+            margin-right: 10px;
+            margin-bottom: 10px;
+            margin-left: 10px;
             box-sizing: border-box;
-            font-size: 22.4px;
-            font-weight: 600;
-            color: #fff;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to email field */
         }
 
         button {
-            width: calc(100% - 20px);
-            padding: 16.8px;
-            font-size: 26.88px;
-            background-color: #4caf50;
-            color: #fff;
+            padding: 8px 40px;
+            border-radius: 8px;
+            font-size: 22px;
+            background-color: #fffc00; /* Vivid yellow */
+            color: #201829;
             border: none;
-            border-radius: 4px;
             cursor: pointer;
-            font-family: 'Teko', sans-serif;
+            transition: background-color 0.3s;
+            font-family: 'Teko', sans-serif; /* Apply Teko font to button */
         }
 
         button:hover {
-            background-color: #45a049;
+            background-color: #FF8C00; /* Darker shade on hover */
         }
+
+        #thankYouMessage {
+            display: none;
+            margin-top: 10px;
+        }
+
+        
     </style>
 </head>
 <body>
 
-    <div id="signup-container">
-        <h2 style="font-size: 28.8px; font-weight: 600; color: #fff;">Sign Up</h2>
-        <form>
-            <input type="text" id="emailInput" placeholder="Enter your email" required>
-            <br>
-            <button type="submit">Sign Up</button>
+    <header>
+        <div>
+            <img src="img/menu.png" alt="Menu Icon">
+            <!-- Use "img/menu.png" for the small icon image -->
+        </div>
+    </header>
+
+    <!-- Image background -->
+    <img id="image-background" src="img/background-image.jpg" alt="Background Image">
+
+    <!-- Formulario de registro -->
+    <div id="form-container">
+        <form id="registrationForm">
+            <h2>Stay tuned with the latest news & updates</h2>
+            <input type="email" id="emailInput" placeholder="Email Address" required>
+            <button type="button" onclick="registerEmail()">SEND</button>
+            <p id="thankYouMessage">Thank you!</p>
         </form>
     </div>
 
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            var image = document.getElementById('image-background');
+            // You can adjust the source and alt text accordingly
+            image.src = "img/background-image.jpg";
+            image.alt = "Background Image Alt Text";
+        });
+    </script>
 </body>
 </html>
